Updated arguments and readme
Signed-off-by: Matt Bentley <mbentley@mbentley.net>